# libmapper-max

./: .gitignore  AUTHORS  CMakeLists.txt  Info.plist  NEWS.md  README  README.markdown  dylibbundler_commands.txt  macos_build.sh  makefile  mapper.c  mapper.def  mapper.help.pd  mapper.maxhelp  maxadmin.c  maxadmin.maxhelp  package-osx-max.sh  package-osx.sh  test_metronome.pd  tester.json  windows_build.bat  windows_build.ps1
.github/workflows/: ci.yml
bridges/jamoma/mapper/: jalg.libmapper.maxpat  jmod.libmapper.maxhelp  jmod.libmapper.maxpat  jmod.libmapper.xml
doc/: build_instructions_maxmsp_windows.md  tutorial_maxmsp_central.md  tutorial_maxmsp_multiobj.md  tutorial_pure_data.md
docs/: mapper.maxref.xml  mpr.in.maxref.xml  mpr.out.maxref.xml
dylibbundler/: index.html
dylibbundler/src/: Dependency.cpp  DylibBundler.cpp  Settings.cpp  Utils.cpp  main.cpp
help/: logolink.maxpat  map.device.maxhelp  map.in.maxhelp  map.out.maxhelp  mapper.help.pd  mapper.maxhelp  mpr.device.maxhelp  mpr.in.maxhelp  mpr.out.maxhelp
mapdevice/: Info.plist  logolink.maxpat  map.device.c  map.device.maxhelp  mapdevice.c  mpr.device.c
mapdevice/map.device.xcodeproj/: project.pbxproj
mapdevice/map.device.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mapdevice/map.device.xcodeproj/xcuserdata/jocal.xcuserdatad/xcschemes/: xcschememanagement.plist
mapdevice/mapdevice.xcodeproj/: project.pbxproj
mapdevice/mapdevice.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mapdevice/mapdevice.xcodeproj/project.xcworkspace/xcuserdata/jocal.xcuserdatad/: UserInterfaceState.xcuserstate
mapdevice/mapdevice.xcodeproj/xcuserdata/jocal.xcuserdatad/xcschemes/: max.xcscheme  pd.xcscheme
mapdevice/mpr.device.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mapdevice/mpr.device.xcodeproj/project.xcworkspace/xcuserdata/malloch.xcuserdatad/: UserInterfaceState.xcuserstate
mapdevice/mpr.device.xcodeproj/xcuserdata/malloch.xcuserdatad/xcschemes/: xcschememanagement.plist
mapin/: Info.plist  map.in.c  mapin.c  mpr.in.c
mapin/map.in.xcodeproj/: project.pbxproj
mapin/map.in.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mapin/map.in.xcodeproj/project.xcworkspace/xcuserdata/jocal.xcuserdatad/: UserInterfaceState.xcuserstate
mapin/map.in.xcodeproj/xcuserdata/jocal.xcuserdatad/xcschemes/: max.xcscheme
mapin/mapin.xcodeproj/: project.pbxproj
mapin/mapin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mapin/mpr.in.xcodeproj/: project.pbxproj
mapin/mpr.in.xcodeproj/project.xcworkspace/xcshareddata/: map.in.xccheckout
mapin/mpr.in.xcodeproj/project.xcworkspace/xcuserdata/malloch.xcuserdatad/: UserInterfaceState.xcuserstate
mapin/mpr.in.xcodeproj/xcuserdata/malloch.xcuserdatad/xcschemes/: map.in.xcscheme  xcschememanagement.plist
mapout/: Info.plist  map.out.c  map.out.maxhelp  mapout.c  mpr.out.c
mapout/map.out.xcodeproj/: project.pbxproj
mapout/map.out.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mapout/mapout.xcodeproj/: project.pbxproj
mapout/mapout.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mapout/mapout.xcodeproj/project.xcworkspace/xcuserdata/jocal.xcuserdatad/: UserInterfaceState.xcuserstate
mapout/mapout.xcodeproj/xcuserdata/jocal.xcuserdatad/xcschemes/: max.xcscheme  xcschememanagement.plist
mapout/mpr.out.xcodeproj/: project.pbxproj
mapout/mpr.out.xcodeproj/project.xcworkspace/xcshareddata/: map.out.xccheckout
mapout/mpr.out.xcodeproj/project.xcworkspace/xcuserdata/malloch.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
mapout/mpr.out.xcodeproj/xcuserdata/malloch.xcuserdatad/xcschemes/: map.out.xcscheme  xcschememanagement.plist
mapper/: CMakeLists.txt  Info.plist  makefile  mapper.c  mapper.help.pd  mapper.maxhelp  mapper_pd.def  sample_device_definition.json
mapper.xcodeproj/: jocal.mode1v3  jocal.pbxuser  project.pbxproj
mapper/cmake-pd/: CMakeLists.txt  pd.cmake
mapper/mapper.xcodeproj/: project.pbxproj
mapper/mapper.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
maxadmin.xcodeproj/: jocal.mode1v3  jocal.pbxuser  project.pbxproj
maxdist/: mpr-objectmappings.txt  mpr.header.maxpat  mpr.logolink.maxpat  mpr.overview.maxpat  package-info.json
maxdist/docs/refpages/: _c74_contents.xml  mapper.maxref.xml  mpr.device.maxref.xml  mpr.in.maxref.xml  mpr.out.maxref.xml  oscmulticast.maxref.xml
maxdist/examples/: cursor_instance.maxpat  instanced_canvas.maxpat  instanced_pwm.maxpat  pwm_instance.maxpat
mpr.device/: Info.plist  mpr.device.c  mpr.device.maxhelp
mpr.in/: Info.plist  mpr.in.c  mpr.in.maxhelp
mpr.out/: CMakeLists.txt  Info.plist  mpr.out.c  mpr.out.maxhelp
mpr_device/: CMakeLists.txt  Info.plist  mpr.device.c  mpr.device.maxhelp  mpr.device.maxref.xml
mpr_device/mpr.device.xcodeproj/: project.pbxproj
mpr_device/mpr.device.xcodeproj/xcuserdata/malloch.xcuserdatad/xcschemes/: xcschememanagement.plist
mpr_in/: Info.plist  mpr.in.c  mpr.in.maxhelp
mpr_in/mpr.in.xcodeproj/: project.pbxproj
mpr_in/mpr.in.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mpr_in/mpr.in.xcodeproj/xcuserdata/malloch.xcuserdatad/xcschemes/: xcschememanagement.plist
mpr_out/: CMakeLists.txt  Info.plist  mpr.out.c  mpr.out.maxhelp
mpr_out/mpr.out.xcodeproj/: project.pbxproj
mpr_out/mpr.out.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mpr_out/mpr.out.xcodeproj/xcuserdata/malloch.xcuserdatad/xcschemes/: xcschememanagement.plist
oscmulticast/: CMakeLists.txt  Info.plist  makefile  oscmulticast.c  oscmulticast.def  oscmulticast.help.pd  oscmulticast.maxhelp
test/: instanced_pwm.maxpat  instanced_sliders.maxpat  multitouch_example.maxpat  multitouch_example2.maxpat  pwm.maxpat  pwm_inside.maxpat  pwm_instance.maxpat  slider_instance.maxpat  slider_instances.maxpat  sliderctl_instance.maxpat  test_metronome.pd
